--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -564,100 +564,113 @@
     });
 </script>
 
-<!-- === REGISTRATION + HACK RESOURCES SUBCARDS === -->
-<div class="row subcards-wrap g-3" aria-label="Hack Operations quick actions">
-  <!-- Registration subcard -->
-  <div class="col-md-6">
-    <div class="subcard-emp">
-      <h3>📝 Registration</h3>
-      <ol class="step-list">
-        <li class="step-item">
-          <span class="step-badge">Step 1</span>
-          <div class="step-text">
-            Register with <strong>OneStopForm</strong> → go to <strong>Hack University</strong> → 
-            <em>Hackathons</em> and complete the One Stop Form.
-            <br>
-                [ HackUniversity.vercel.app]
-            <br>
-            <a class="pill" href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-external-link-alt"></i> Open Hack University 
-            </a>
-          </div>
-        </li>
+        <!-- === REGISTRATION + HACK RESOURCES SUBCARDS === -->
+        <div class="row subcards-wrap g-3" aria-label="Hack Operations quick actions">
+        <!-- Registration subcard -->
+        <div class="col-md-6">
+            <div class="subcard-emp">
+            <h3>📝 Registration</h3>
+            <ol class="step-list">
+                <li class="step-item">
+                <span class="step-badge">Step 1</span>
+                <div class="step-text">
+                    Register with <strong>OneStopForm</strong> → go to <strong>Hack University</strong> → 
+                    <em>Hackathons</em> and complete the One Stop Form.
+                    <br>
+                        [ HackUniversity.vercel.app]
+                    <br>
+                    <a class="pill" href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-external-link-alt"></i> Open Hack University 
+                    </a>
+                </div>
+                </li>
 
-        <li class="step-item">
-          <span class="step-badge">Step 2</span>
-          <div class="step-text">
-            Get your ticket on the <strong>Bevy calendar</strong>.
-            <br>
-                [ EmpowHERhack2025-bevy.vercel.app ]
-            <br>
-            <a class="pill" href="https://empowherhack2025-bevy.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-ticket-alt"></i> Open Bevy Calendar 
-            </a>
-          </div>
-        </li>
+                <li class="step-item">
+                <span class="step-badge">Step 2</span>
+                <div class="step-text">
+                    Once Register at HackUniversity.vercel.app <strong>Redeem Subscriptions/Apis, etc.</strong>.
+                    <br>
+                        [ EmpowHERhack2025-Redeem.vercel.app ]
+                    <br>
+                    <a class="pill" href="https://codecrunchglobal.vercel.app/HACK-6-EmpowHER25-redeem.html" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-ticket-alt"></i> Hack Participant Subscriptions/Apis
+                    </a>
+                </div>
+                </li>
 
-        <li class="step-item">
-        <span class="step-badge">Step 3</span>
-        <div class="step-text">
-            <strong>Check in with Staff</strong> 
-            <span style="opacity:.85;">[only for In-person events]</span>.
-            <br>
-            <a class="pill is-disabled" aria-disabled="true" tabindex="-1">
-            <i class="fa-solid fa-id-badge" aria-hidden="true"></i> Not available for this event
-            </a>
+
+
+                <li class="step-item">
+                <span class="step-badge">Step 3</span>
+                <div class="step-text">
+                    Get your ticket on the <strong>Bevy calendar</strong>.
+                    <br>
+                        [ EmpowHERhack2025-bevy.vercel.app ]
+                    <br>
+                    <a class="pill" href="https://empowherhack2025-bevy.vercel.app/" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-ticket-alt"></i> Open Bevy Calendar 
+                    </a>
+                </div>
+                </li>
+
+                <li class="step-item">
+                <span class="step-badge">Step 4</span>
+                <div class="step-text">
+                    <strong>Check in with Staff</strong> 
+                    <span style="opacity:.85;">[only for In-person events]</span>.
+                    <br>
+                    <a class="pill is-disabled" aria-disabled="true" tabindex="-1">
+                    <i class="fa-solid fa-id-badge" aria-hidden="true"></i> Not available for this event
+                    </a>
+                </div>
+                </li>
+
+
+                <li class="step-item">
+                <span class="step-badge">Step 5</span>
+                <div class="step-text">
+                    Register on <strong>Devpost</strong> 
+                    <span style="opacity:.85;">(Project Submission Portal)</span>.
+                    <br>
+                        [ EmpowHERhack2025-devpost.vercel.app ]
+                    <br>
+                    <a class="pill" href="https://empowherhack2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-rocket"></i> Open Devpost Portal 
+                    </a>
+                </div>
+                </li>
+            </ol>
+            </div>
         </div>
-        </li>
 
-
-        <li class="step-item">
-          <span class="step-badge">Step 4</span>
-          <div class="step-text">
-            Register on <strong>Devpost</strong> 
-            <span style="opacity:.85;">(Project Submission Portal)</span>.
-            <br>
-                [ EmpowHERhack2025-devpost.vercel.app ]
-            <br>
-            <a class="pill" href="https://empowherhack2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-rocket"></i> Open Devpost Portal 
-            </a>
-          </div>
-        </li>
-      </ol>
-    </div>
-  </div>
-
-  <!-- Hack Resources subcard -->
-  <div class="col-md-6">
-    <div class="subcard-emp">
-      <h3>📚 Hack Resources</h3>
-      <div class="resource-list">
-        <div class="resource-item">
-          <strong>Hack Agenda:</strong>
-            <br>
-                [ EmpowHERhack2025-agenda.vercel.app ]
-            <br>
-          <a href="https://EmpowHERHack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-up-right-from-square"></i>
-            EmpowHER 2025 Agenda
-          </a>
+        <!-- Hack Resources subcard -->
+        <div class="col-md-6">
+            <div class="subcard-emp">
+            <h3>📚 Hack Resources</h3>
+            <div class="resource-list">
+                <div class="resource-item">
+                <strong>Hack Agenda:</strong>
+                    <br>
+                        [ EmpowHERhack2025-agenda.vercel.app ]
+                    <br>
+                <a href="https://EmpowHERHack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-up-right-from-square"></i>
+                    EmpowHER 2025 Agenda
+                </a>
+                </div>
+                <div class="resource-item">
+                <strong>Hack Guide:</strong>
+                <br>
+                        [ hackuniversity-HackerGuide.vercel.app ]
+                    <br>
+                <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-up-right-from-square"></i>
+                    Hacker Guide &amp; Toolkit
+                </a>
+                </div>
+            </div>
+            </div>
         </div>
-        <div class="resource-item">
-          <strong>Hack Guide:</strong>
-        <br>
-                [ hackuniversity-HackerGuide.vercel.app ]
-            <br>
-          <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-up-right-from-square"></i>
-            Hacker Guide &amp; Toolkit
-          </a>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- === /END SUBCARDS === -->
-
-
+        <!-- === /END SUBCARDS === -->
 
 
 
@@ -665,7 +678,7 @@
 
 
     <!-- Non-Participants Card (Get Involved) -->
-    <div class="row" style="margin: 3rem 0;">
+    <div class="row justify-content-center" style="margin: 3rem auto; max-width: 100%; padding: 0 15px;">
 
         <div style="background: linear-gradient(135deg, rgba(50, 205, 50, 0.15) 0%, rgba(0, 198, 255, 0.15) 100%); border-radius: 16px; padding: 2.5rem; backdrop-filter: blur(4px); border: 2px solid rgba(50, 205, 50, 0.3); box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); height: 100%;">
             <div style="text-align: center; margin-bottom: 2rem;">
@@ -695,7 +708,7 @@
 
 </div>
 
-
+ 
 
 <style>
     /* Hover effects for hacker buttons */
