--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -726,9 +726,9 @@
             </div>
           </li>
            <li style="margin:.4rem 0;">
-            Once Register at HackUniversity.vercel.app <strong>Claim Subscriptions/Apis, etc.</strong> 
+            Once Register at HackUniversity.vercel.app <strong>Redeem Subscriptions/Apis, etc.</strong> 
             <div style="margin-top:.35rem;">
-              <a class="btn btn-secondary" href="https://codecrunchglobal.vercel.app/HACK-6.1-EmpowHERhackDay25-claim.html" target="_blank" rel="noopener noreferrer"
+              <a class="btn btn-secondary" href="https://codecrunchglobal.vercel.app/HACK-6.1-EmpowHERhackDay25-redeem.html" target="_blank" rel="noopener noreferrer"
                  style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
                 <i class="fa-solid fa-up-right-from-square" aria-hidden="true"></i> Hack Participant Subscriptions/Apis
               </a>
