--- a/HACK-6-EmpowHER25-redeem.html
+++ b/HACK-6-EmpowHER25-redeem.html
@@ -11,6 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <title>EmpowHer Hackathon Fall 2025 - Hack Participant Redeem — Subscriptions / APIs</title>
+<!-- line 240 too -->
 
 <!-- Font Awesome (icons) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
@@ -237,7 +238,7 @@
     <header>
       <div class="brand">
         <div class="brand-badge"><i class="fa-solid fa-bolt"></i></div>
-        <div>Hack Participant Subscriptions / APIs Redeem</div>
+        <div>EmpowHer MiniHackDAY Fall 2025 - Hack Participant Redeem — Subscriptions / APIs</div>
       </div>
       <a class="btn btn-ghost" href="#" id="hackHome">Hack Home</a>
     </header>
