--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -209,6 +209,8 @@
   <header>
     <nav class="container" aria-label="Primary">
       <div class="logo">EmpowHer HackDay</div>
+
+      
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="http://empowherhackdayfall2025-agenda.vercel.app/" rel="noopener noreferrer">Schedule</a></li>
@@ -224,12 +226,11 @@
         <h1>EmpowHer HackDay</h1>
 
         <!-- Link row under title -->
-        <p style="margin:.75rem 0 1.25rem;">
-          <a href="https://events.mlh.io/events/13014-empowher-hackday" target="_blank" rel="noopener noreferrer"
-            class="btn btn-primary pulse" style="display:inline-flex;align-items:center;gap:.5rem;">
-            <i class="fa-solid fa-up-right-from-square" aria-hidden="true"></i>
-            Register on MLH
-          </a>
+   
+            <p style="text-align:center; margin: 0 0 1rem;">
+        <a class="link-pill" href="https://empowherhackdayfall25.vercel.app/" target="_blank" rel="noopener noreferrer">
+            <i class="fa-solid fa-up-right-from-square"></i> EmpowHerHackDayFall25.vercel.app
+        </a>
         </p>
 
         <!-- MLH/Google in-person blurb -->
