--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -247,6 +247,8 @@
           We especially encourage women and non-binary participants to join, and welcome allies from all backgrounds.
         </p>
 
+        <p> Prizes: Mini IoT Development Kit, <a href="https://unibee.dev" target="_blank">Unibee.dev - Developer Plan Subscription</a> & <a href="https://Kluster.ai" target="_blank">Kluster.AI - Starter Kit</a></p>
+
         <div class="countdown" aria-live="polite">
           <h3>Event Starts In:</h3>
           <div class="countdown-timer">
@@ -464,7 +466,9 @@
           <div class="feature-card">
             <div class="feature-icon">🏆</div>
             <h3>Amazing Prizes</h3>
-            <p>Win exciting prizes!</p>
+            <p>Mini IoT Development Kit </p>
+            <p>3 months <Unibee class="dev">Developer Plan Subscription</Unibee> </p>
+            <p><Kruste class="ai">For all participants: AI Starter Kit</Kruste> </p>
           </div>
           <div class="feature-card">
             <div class="feature-icon">🎓</div>
