--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -247,7 +247,7 @@
           We especially encourage women and non-binary participants to join, and welcome allies from all backgrounds.
         </p>
 
-        <p> Prizes: Mini IoT Development Kit, <a href="https://unibee.dev" target="_blank">Unibee.dev - Developer Plan Subscription</a> & <a href="https://Kluster.ai" target="_blank">Kluster.AI - Starter Kit</a></p>
+        <p> Prizes: Mini IoT Development Kit, <a href="https://https://unibee.dev/?utm_source=partners&utm_medium=organic&utm_campaign=3-free-for-hackathon&utm_term=CodeCrunch" target="_blank">Unibee.dev - Developer Plan Subscription</a> & <a href="https://Kluster.ai" target="_blank">Kluster.AI - Starter Kit</a></p>
 
         <div class="countdown" aria-live="polite">
           <h3>Event Starts In:</h3>
