--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -628,20 +628,26 @@
                 </div>
                 </li>
 
-
-                <li class="step-item">
-                <span class="step-badge">Step 5</span>
-                <div class="step-text">
-                    Register on <strong>Devpost</strong> 
-                    <span style="opacity:.85;">(Project Submission Portal)</span>.
-                    <br>
+<li class="step-item">
+  <span class="step-badge">Step 5</span>
+  <div class="step-text">
+    Register on <strong>Devpost</strong> 
+    <span style="opacity:.85;">(Project Submission Portal)</span>.
+                 <br>
                         [ EmpowHERhack2025-devpost.vercel.app ]
                     <br>
-                    <a class="pill" href="https://empowherhack2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-rocket"></i> Open Devpost Portal 
-                    </a>
-                </div>
-                </li>
+    <a class="pill" href="https://empowherhack2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer">
+      <i class="fas fa-rocket"></i> Open Devpost Portal
+    </a>
+    <p style="margin-top:.4rem; font-size:.9rem; opacity:.9;">
+      After registering, create a GitHub repository and submit your first commit to Devpost. 
+      If you don’t have an app name or team yet, make your own initial commit and update it later. 
+      You will still be allowed to continue making edits until the closing ceremony. 
+      <strong>This step is required to be completed before mid-hackathon to confirm your participation and access participant benefits.</strong>
+    </p>
+  </div>
+</li>
+
             </ol>
             </div>
         </div>
