--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -366,15 +366,23 @@
                 </div>
               </li>
 
-              <li style="margin:.4rem 0;">
-                Register on <strong>Devpost</strong> <span style="opacity:.85;">(Project Submission Portal)</span>.
-                <div style="margin-top:.35rem;">
-                  <a class="btn btn-secondary" href="https://empowherhackdayfall2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer"
-                     style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
-                    <i class="fa-solid fa-rocket" aria-hidden="true"></i> Open Devpost Portal
-                  </a>
-                </div>
-              </li>
+        <li style="margin:.4rem 0;">
+          Register on <strong>Devpost</strong> <span style="opacity:.85;">(Project Submission Portal)</span>.
+          <div style="margin-top:.35rem;">
+            <a class="btn btn-secondary" href="https://empowherhackdayfall2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer"
+              style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
+              <i class="fa-solid fa-rocket" aria-hidden="true"></i> Open Devpost Portal
+            </a>
+          </div>
+          <p style="margin-top:.4rem; font-size:.9rem; opacity:.9;">
+            After registering, create a GitHub repository and submit your first commit to Devpost. 
+            If you don’t have an app name or team yet, make your own initial commit and update it later.
+            You will still be allowed to continue making edits until the closing ceremony. 
+            <strong>This step is required to be completed before mid-hackathon to confirm your participation and access participant benefits.</strong>
+          </p>
+        </li>
+
+
             </ol>
           </div>
 
