--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -606,7 +606,7 @@
 
         <h4 style="margin-bottom:.35rem;">⏱️ Mini Day Timeline</h4>
         <div class="mini-grid" aria-label="Timeline">
-          <div class="mini-item"><strong>10:00 AM</strong> Kickoff, team forming</div>
+          <div class="mini-item"><strong>9:00 AM</strong> Check-in, Kickoff, team forming</div>
           <div class="mini-item"><strong>1:00 PM</strong> Checkpoint & mentor round</div>
           <div class="mini-item"><strong>6:30 PM</strong> Submissions open / final checks</div>
           <div class="mini-item"><strong>8:00 PM</strong> Submissions due / Demos</div>
@@ -649,6 +649,7 @@
 
         <h4 style="margin-bottom:.35rem;">⏱️ Mini Day Timeline</h4>
         <div class="mini-grid" aria-label="Timeline">
+          <div class="mini-item"><strong>9:00 AM</strong> Check-in, Kickoff</div>
           <div class="mini-item"><strong>10:00 AM</strong> Ideation & validation</div>
           <div class="mini-item"><strong>2:00 PM</strong> Draft deck review (mentors)</div>
           <div class="mini-item"><strong>6:30 PM</strong> Finalize deck & video link</div>
