--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -328,6 +328,9 @@
 
               <li style="margin:.4rem 0;">
                 [Get Started with Sponsored Participant Products (Subscriptions/Apis, etc.)] Register with <strong>OneStopForm</strong> → go to <strong>Hack University</strong> → <em>Hackathons</em> and complete the One Stop Form.
+                <br>
+                        [HackUniversity.vercel.app]
+                    <br>
                 <div style="margin-top:.35rem;">
                   <a class="btn btn-secondary" href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer"
                      style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
@@ -338,6 +341,9 @@
 
               <li style="margin:.4rem 0;">
                 Once Register at HackUniversity.vercel.app <strong>Redeem Subscriptions/Apis, etc.</strong> 
+                <!-- <br>
+                        [ HackUniversity.vercel.app ]
+                    <br> -->
                 <div style="margin-top:.35rem;">
                   <a class="btn btn-secondary" href="https://codecrunchglobal.vercel.app/HACK-6.1-EmpowHERhackDay25-redeem.html" target="_blank" rel="noopener noreferrer"
                      style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
@@ -348,6 +354,9 @@
 
               <li style="margin:.4rem 0;">
                 Get your ticket on the <strong>Bevy calendar</strong>.
+                                <br>
+                        [EmpowherHackDAYfall2025-BEVY.vercel.app]
+                    <br>
                 <div style="margin-top:.35rem;">
                   <a class="btn btn-secondary" href="https://empowherhackdayfall2025-bevy.vercel.app/" target="_blank" rel="noopener noreferrer"
                      style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
@@ -368,6 +377,9 @@
 
         <li style="margin:.4rem 0;">
           Register on <strong>Devpost</strong> <span style="opacity:.85;">(Project Submission Portal)</span>.
+          <br>
+                        [EmpowherHackDAYfall2025-Devpost.vercel.app]
+                    <br>
           <div style="margin-top:.35rem;">
             <a class="btn btn-secondary" href="https://empowherhackdayfall2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer"
               style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
@@ -393,12 +405,18 @@
             <ul style="margin-top:.5rem;padding-left:1.1rem;">
               <li style="margin:.4rem 0;">
                 <strong>Hack Agenda:</strong><br/>
+                                                <br>
+                        [EmpowherHackDAYfall2025-Agenda.vercel.app]
+                    <br>
                 <a href="https://empowherhack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer" style="color:#ffd700;text-decoration:underline;">
                   EmpowHER 2025 Agenda
                 </a>
               </li>
               <li style="margin:.4rem 0;">
                 <strong>Hack Guide:</strong><br/>
+                  <br>
+                        [HackUniversity-HackerGuide.vercel.app]
+                    <br>
                 <a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" style="color:#ffd700;text-decoration:underline;">
                   Hacker Guide &amp; Toolkit
                 </a>
