--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -687,7 +687,7 @@
       <article class="track-card" aria-labelledby="t1-title">
         <div class="track-head">
           <h3 id="t1-title" class="track-name">🌟 Track 1 — EmpowHER General</h3>
-          <span class="badge" aria-label="Top 3 projects win">Top 3 Win</span>
+          <span class="badge" aria-label="Top 1 project wins">Top 1 Win</span>
         </div>
         <p class="muted">Build an innovative solution in any of these focus areas. Code or vibe coding welcome! Cite sources when using Gen AI.</p>
 
@@ -736,7 +736,7 @@
       <article class="track-card" aria-labelledby="t2-title">
         <div class="track-head">
           <h3 id="t2-title" class="track-name">🦄 Track 2 — Tech Unicorn (Pitch)</h3>
-          <span class="badge" aria-label="Best pitch wins">Best Pitch</span>
+          <span class="badge" aria-label="Best pitch wins">Best Pitch Wins</span>
         </div>
         <p class="muted">Startup pitch challenge — <strong>No code Track.</strong> Focus on vision, problem, market, and go-to-market.</p>
 
