--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -504,7 +504,7 @@
                                                 <br>
                         [EmpowherHackDAYfall2025-Agenda.vercel.app]
                     <br>
-                <a href="https://empowherhack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer" style="color:#ffd700;text-decoration:underline;">
+                <a href="https://empowherhackdayfall25-agenda.vercel.app/" target="_blank" rel="noopener noreferrer" style="color:#ffd700;text-decoration:underline;">
                   EmpowHER 2025 Agenda
                 </a>
               </li>
@@ -1134,3 +1134,4 @@
   </script>
 </body>
 </html>
+
