--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -181,11 +181,21 @@
         <div class="flex flex-col gap-3 space-y-2">
             <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
                class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Organizations Membership <br>[ Discord / Hack University OneStop Form ] <br> Students 13+ 
+                Membership <br>[ Google Developer Group at FIU x Code Crunch Worldwide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch ] <br> Ages 13+ 
             </a>
+
+            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Membership certificates  <!--  <br><br>  -->
+            </a>
+            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Hackathons Registration <br> Ages 16+ 
+            </a>
+
             <a href="https://codecrunchglobal.vercel.app/hackathons-wiki.html" target="_blank" 
                class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Hackathons<br>[Registration & HACKER GUIDE] <br> Students 16+ 
+                HACKER GUIDE 
             </a>
 
             <a href="https://infoflyers.vercel.app" target="_blank" 
