--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -193,7 +193,7 @@
                 Hackathons Registration <br> Ages 16+ 
             </a>
 
-            <a href="https://codecrunchglobal.vercel.app/hackathons-wiki.html" target="_blank" 
+            <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" 
                class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                 HACKER GUIDE 
             </a>
