--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -186,6 +186,16 @@
 
             <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
                class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Discord <br>[ Google Developer Group at FIU x Code Crunch Worldwide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch ] <br> Ages 13+ 
+            </a>
+
+            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Discord <br>[ Google Developer Group at FIU x Code Crunch Worldwide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch ] <br> Ages 13+ 
+            </a>
+
+            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                 Membership certificates  <!--  <br><br>  -->
             </a>
             <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
