--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -910,7 +910,7 @@
             
 
 
-            <a href="https://ba-00001.github.io/codecrunchclub/cc-prospectus.html" 
+            <a href="https://codecrunchglobal.vercel.app/cc-prospectus.html" 
             class="btn btn-primary" 
             target="_blank" 
             style="margin: 20px;">
