--- a/hackathonvolunteer-JudgeExpoForms.html
+++ b/hackathonvolunteer-JudgeExpoForms.html
@@ -182,25 +182,25 @@
 
     <div class="portal-grid" style="margin-top:14px">
       <!-- Replace the # links below with the actual Google Form URLs for each event -->
-      <a class="portal-btn" href="#"
+      <a class="portal-btn" href="https://docs.google.com/document/d/1zJCDtL_W2ak0stmIorQfJJNjeK-qZQfDAigGfHKJw_U/edit?usp=sharing"
          title="Open the SummerCodeX 2025 Judging & Expo Google Form">
         <span>🔒 SummerCodeX — Summer 2025</span>
         <small>Open Judging & Expo form — Status: Closed</small>
       </a>
 
-      <a class="portal-btn" href="#"
+      <a class="portal-btn" href="https://docs.google.com/document/d/1zJCDtL_W2ak0stmIorQfJJNjeK-qZQfDAigGfHKJw_U/edit?usp=sharing"
          title="Open the 305 Hackathon Edition (Fall 2025) Judging & Expo Google Form">
         <span>🔒 305 Hackathon Edition — Fall 2025</span>
         <small>Open Judging & Expo form — Status: Closed</small>
       </a>
 
-      <a class="portal-btn" href="#"
+      <a class="portal-btn" href="https://docs.google.com/document/d/1zJCDtL_W2ak0stmIorQfJJNjeK-qZQfDAigGfHKJw_U/edit?usp=sharing"
          title="Open the EmpowHer Hack (Fall 2025) Judging & Expo Google Form">
         <span>🔒 EmpowHer Hackathon Online — Fall 2025</span>
         <small>Open Judging & Expo form — Coming soon</small>
       </a>
 
-      <a class="portal-btn" href="#"
+      <a class="portal-btn" href="https://docs.google.com/document/d/1zJCDtL_W2ak0stmIorQfJJNjeK-qZQfDAigGfHKJw_U/edit?usp=sharing"
          title="Open the EmpowHer Mini HackDay (Fall 2025) Judging & Expo Google Form">
         <span>🔒 EmpowHer Mini HackDay in-person — Fall 2025</span>
         <small>Open Judging & Expo form — Coming soon</small>
