--- a/hackathonvolunteer-eventRegistration.html
+++ b/hackathonvolunteer-eventRegistration.html
@@ -181,7 +181,7 @@
         <!-- SummerCodeX — CLOSED -->
          <!-- this disable aria-disabled="true" tabindex="-1"  -->
         <a class="portal-btn"
-           href="#REPLACE_WITH_GFORM_URL_SummerCodeX_2025"
+           href="https://docs.google.com/document/d/1wNPG9l8MfihgGItGV_0ApGV_F-W2ABa2by5qCVKuR4s/edit?usp=sharing"
            aria-disabled="true" tabindex="-1"
            title="Registration closed">
           <span>🔒 SummerCodeX — Summer 2025</span>
@@ -195,7 +195,7 @@
 
         <!-- 305 Hackathon Edition — OPENS SOON -->
         <a class="portal-btn"
-           href="#REPLACE_WITH_GFORM_URL_305_Fall_2025"
+           href="https://docs.google.com/document/d/1wNPG9l8MfihgGItGV_0ApGV_F-W2ABa2by5qCVKuR4s/edit?usp=sharing"
            aria-disabled="true" tabindex="-1"
            title="Registration not open yet">
           <span>🔒 305 Hackathon Edition — Fall 2025</span>
@@ -209,7 +209,7 @@
 
         <!-- EmpowHer Hack — OPEN (live now) -->
         <a class="portal-btn"
-           href="https://docs.google.com/forms/d/e/1FAIpQLSeXMq0v0GD4cTIRRW4uEsTrShjr_wiOF0eCUIeCpCzk3w97mA/viewform?usp=dialog"
+           href="https://docs.google.com/document/d/1wNPG9l8MfihgGItGV_0ApGV_F-W2ABa2by5qCVKuR4s/edit?usp=sharing"
            title="Open the EmpowHer Hackathon Online — Fall 2025 Judging & Expo Google Form">
           <span>🔒 EmpowHer Hackathon Online — Fall 2025</span>
           <small>
@@ -222,7 +222,7 @@
 
         <!-- EmpowHer Mini HackDay — OPEN (live now) -->
         <a class="portal-btn"
-           href="https://docs.google.com/forms/d/e/1FAIpQLSe_vntEUMjl2zMUqoEGcriNnlYoMS6IctCJ-yai1Otl4Lr2lw/viewform?usp=dialog"
+           href="https://docs.google.com/document/d/1wNPG9l8MfihgGItGV_0ApGV_F-W2ABa2by5qCVKuR4s/edit?usp=sharing"
            title="Open the EmpowHer Mini HackDay (In-Person) — Fall 2025 Judging & Expo Google Form">
           <span>🔒 EmpowHer Mini HackDay (In-Person) — Fall 2025</span>
           <small>
