--- a/hack2-submissions-req.html
+++ b/hack2-submissions-req.html
@@ -730,160 +730,196 @@
 
 
             <section class="card">
-  <h2 class="card-title">How to Submit Your Project</h2>
+  <h2 class="card-title">How to Submit</h2>
   <p class="card-description">
-    Follow these organized steps to properly submit your project for judging, verify requirements, and ensure a complete submission before the deadline.
-    <br><strong>Note:</strong> Opening Ceremony and Live Demos will be hosted via Zoom:
+    Follow these steps carefully to submit your project for judging and verify the checklist before the deadline.
+    Opening Ceremony & Live Demos will be hosted via Zoom:
     <a href="https://codecrunch-zoom.vercel.app" target="_blank" rel="noopener">codecrunch-zoom.vercel.app</a>.
-    <br><strong>Reminder:</strong> Review each event’s hack agenda frequently for updates or changes during the hackathon.
+    Please review each event’s hack agenda regularly for updates or changes during the hackathon.
   </p>
 
-  <!-- Live Demo Order -->
-  <div class="important-notice" style="margin-top:.75rem;">
+  <!-- Live Demo Order Note -->
+  <div class="important-notice" style="margin-top:.5rem;">
     <h3 class="notice-title"><i class="bi bi-list-ol"></i> Live Demo Presentation Order</h3>
     <p class="notice-content">
-      The official presentation order is maintained in this public Google Sheet:
-      <br>
-      <a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing" target="_blank" rel="noopener">
-        [ PUBLIC ] — DEMO PRESENTATION LIST
-      </a>
-      <br>Check your team’s slot and be in the Zoom waiting room at least <strong>5 minutes</strong> before your turn.
+      The official presentation order is listed here:
+      <a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing" target="_blank" rel="noopener">[ PUBLIC ] — DEMO PRESENTATION LIST</a>.
+      Be in the Zoom waiting room at least <strong>5 minutes</strong> before your slot.
     </p>
   </div>
 
-  <!-- ─────────────── STEP 1 ─────────────── -->
-  <div class="submission-step">
-    <h3 class="step-header">Step 1 — Create Your GitHub Repository</h3>
-    <ul class="step-list">
-      <li>Create a <strong>public GitHub repository</strong> containing all project files and source code.</li>
-      <li>Include a <strong>README.md</strong> file with:
-        <ul>
-          <li>Project description and overview</li>
-          <li>Setup and installation instructions</li>
-          <li>Usage details and features</li>
-          <li>Technologies used</li>
-          <li>Team members and their contributions</li>
-        </ul>
-      </li>
-      <li>Describe <strong>how your project aligns with the hackathon theme</strong> and indicate the <strong>track(s)</strong> you’re participating in:
+  <!-- Steps -->
+  <div class="submission-steps">
+    <div class="step-card">
+      <div class="step-number">1</div>
+      <div class="step-content">
+        <h3 class="step-title">Create Your GitHub Repository</h3>
+        <p class="step-description">Create a <strong>public GitHub repository</strong> with all project files and source code.</p>
+        <p class="step-description">Include a <strong>README.md</strong> with: project description, setup & installation steps, usage instructions, features, and technologies used.</p>
+        <p class="step-description">Explain <strong>how your project aligns with the hackathon theme</strong> and state the <strong>track(s)</strong> you’re competing in:</p>
         <ul>
           <li><strong>General Track (Track 1)</strong> — requires code implementation.</li>
-          <li><strong>Tech Unicorn (Track 2)</strong> — no-code; requires a business pitch with specific details.</li>
+          <li><strong>Tech Unicorn (Track 2)</strong> — no-code; requires a business pitch with specified details.</li>
         </ul>
+        <p class="step-description">Upload a <strong>demo video (MP4, max 5 minutes)</strong>. Judges review this prior to live demos.</p>
+        <p class="step-description">Attach a <strong>presentation file</strong> (<code>.ppt</code>, <code>.pptx</code>, or <code>.pdf</code>), and include a <strong>public Google Slides link</strong> for your live demo (2-minute presentation + 1-minute Q&A). Live sessions use Zoom:
+          <a href="https://codecrunch-zoom.vercel.app" target="_blank" rel="noopener">codecrunch-zoom.vercel.app</a>.
+        </p>
+        <div class="step-description" style="margin-top:.5rem;">
+          <strong>Presentation slide requirements:</strong>
+          <ul style="margin-top:.25rem; margin-left:1.25rem; list-style:disc;">
+            <li><strong>Slide 1:</strong> Project name, team members, and the track(s) you are participating in.</li>
+            <li><strong>Slide 2:</strong> How your project aligns with the hackathon theme and the specific challenge you selected.</li>
+          </ul>
+        </div>
+        <p class="step-description">If your team does not present during the closing ceremony, your video may be played, but you will receive <strong>zero points</strong> for the live presentation due to absence.</p>
+      </div>
+    </div>
+
+    <div class="step-card">
+      <div class="step-number">2</div>
+      <div class="step-content">
+        <h3 class="step-title">Add Your Demo Video</h3>
+        <p class="step-description">Provide a <strong>five-minute demo video</strong> showcasing functionality and include its link in the README.</p>
+        <p class="step-description"><strong>Upload the video file</strong> (MP4) directly in your repository in addition to any external link.</p>
+      </div>
+    </div>
+
+    <div class="step-card">
+      <div class="step-number">3</div>
+      <div class="step-content">
+        <h3 class="step-title">Finalize Your README</h3>
+        <p class="step-description"><strong>README.md must include</strong>:</p>
+        <ul style="margin-top:.25rem; margin-left:1.25rem; list-style:disc;">
+          <li>Project title and description (with theme alignment)</li>
+          <li>Technologies used</li>
+          <li>Setup & installation instructions</li>
+          <li>Team members and their contributions</li>
+          <li><strong>Link to the demo video</strong> and <strong>high-quality screenshots</strong></li>
+          <li><strong>Note:</strong> Broken/missing/low-quality videos may result in reduced or zero points</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="step-card">
+      <div class="step-number">4</div>
+      <div class="step-content">
+        <h3 class="step-title">Submit on Devpost</h3>
+        <p class="step-description">Submit your <strong>GitHub repository link</strong> and project details on <strong>Devpost</strong> before the deadline.</p>
+        <ul style="margin-top:.25rem; margin-left:1.25rem; list-style:disc;">
+          <li><strong>Clearly state your track(s)</strong> in the Devpost project description.</li>
+          <li><strong>Project name format:</strong> <em>Project Name — Track 1</em> (single track) or <em>Project Name — Track 1 & Track 2</em> (multiple).</li>
+          <li><strong>Missing track selection</strong> defaults to the <strong>General Track</strong>.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Checklist & Notices -->
+  <div class="requirements-and-help">
+    <h2 class="card-title" style="margin-top:1.25rem;">Submission Checklist</h2>
+    <p class="card-description">Confirm the following before you submit.</p>
+
+    <ul class="requirements-list">
+      <li class="requirement-item">
+        <div class="requirement-icon"><i class="bi bi-github"></i></div>
+        <div class="requirement-content">
+          <h3 class="requirement-title">Public GitHub Repository</h3>
+          <p class="requirement-description">Repository is <strong>public</strong> and contains all files.</p>
+        </div>
       </li>
-      <li>Upload a <strong>demo video</strong> (<code>.mp4</code>, max 5 minutes). Judges will review this prior to the live demo.</li>
-      <li>Attach a <strong>presentation file</strong> (<code>.ppt</code>, <code>.pptx</code>, or <code>.pdf</code>).</li>
-      <li>Include a <strong>public Google Slides link</strong> for your live demo presentation (2-minute pitch + 1-minute Q&A). Live presentations and closing ceremony demos will use Zoom:
-        <a href="https://codecrunch-zoom.vercel.app" target="_blank" rel="noopener">codecrunch-zoom.vercel.app</a>.
+
+      <li class="requirement-item">
+        <div class="requirement-icon"><i class="bi bi-camera-video"></i></div>
+        <div class="requirement-content">
+          <h3 class="requirement-title">Demo Video (≤ 5 min)</h3>
+          <p class="requirement-description">Link included in README and <strong>video file uploaded</strong> in the repo.</p>
+        </div>
       </li>
-      <li>If your team does not present during the closing ceremony, your video may be played, but you will receive <strong>zero points</strong> for live presentation due to absence.</li>
+
+      <li class="requirement-item">
+        <div class="requirement-icon"><i class="bi bi-file-earmark-text"></i></div>
+        <div class="requirement-content">
+          <h3 class="requirement-title">Complete README.md</h3>
+          <p class="requirement-description">Includes theme alignment, track(s), setup, technologies, features, team, screenshots, and demo link.</p>
+        </div>
+      </li>
+
+      <li class="requirement-item">
+        <div class="requirement-icon"><i class="bi bi-upload"></i></div>
+        <div class="requirement-content">
+          <h3 class="requirement-title">Devpost Submission</h3>
+          <p class="requirement-description">Submitted before the deadline with track(s) clearly selected and correct project name format.</p>
+        </div>
+      </li>
+
+      <li class="requirement-item">
+        <div class="requirement-icon"><i class="bi bi-list-ol"></i></div>
+        <div class="requirement-content">
+          <h3 class="requirement-title">Live Demo Slot</h3>
+          <p class="requirement-description">
+            Checked the presentation order and prepared to join Zoom 5 minutes before your slot:
+            <a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing" target="_blank" rel="noopener">Demo Presentation List</a>.
+          </p>
+        </div>
+      </li>
+
+      <li class="requirement-item">
+        <div class="requirement-icon"><i class="bi bi-clock"></i></div>
+        <div class="requirement-content">
+          <h3 class="requirement-title">Deadline & Agenda</h3>
+          <p class="requirement-description">
+            All materials uploaded on time. You’ve reviewed the hack agenda for any updates or changes.
+          </p>
+        </div>
+      </li>
     </ul>
 
-    <div class="presentation-guidelines">
-      <h4 class="sub-header">📊 Presentation Slide Requirements</h4>
-      <ul>
-        <li><strong>Slide 1:</strong> Project name, team members, and the track(s) you are participating in.</li>
-        <li><strong>Slide 2:</strong> How your project aligns with the hackathon theme and the specific challenge you selected.</li>
+    <div class="important-notice">
+      <h3 class="notice-title"><i class="bi bi-exclamation-triangle"></i> Important</h3>
+      <p class="notice-content">Double-check links, access permissions, and documentation to avoid disqualification.</p>
+    </div>
+
+    <div class="checklist">
+      <h3 class="checklist-title"><i class="bi bi-check2-square"></i> Final Verification Checklist</h3>
+      <ul class="checklist-items">
+        <li class="checklist-item">Repo is public and contains all project files</li>
+        <li class="checklist-item">Demo video ≤ 5 minutes, uploaded in repo, link in README</li>
+        <li class="checklist-item">README complete (theme, track(s), setup, tech, features, team, screenshots, video link)</li>
+        <li class="checklist-item">All links work (GitHub, video, Google Slides, Devpost)</li>
+        <li class="checklist-item">Devpost submission done with correct project name format</li>
+        <li class="checklist-item">Demo slot confirmed; Zoom ready: <a href="https://codecrunch-zoom.vercel.app" target="_blank" rel="noopener">codecrunch-zoom.vercel.app</a></li>
+        <li class="checklist-item">Agenda reviewed for latest updates</li>
       </ul>
     </div>
-  </div>
 
-  <!-- ─────────────── STEP 2 ─────────────── -->
-  <div class="submission-step">
-    <h3 class="step-header">Step 2 — Add Your Demo Video</h3>
-    <ul class="step-list">
-      <li>Record a <strong>five-minute demo video</strong> that highlights your project’s functionality, user experience, and core features.</li>
-      <li>Upload the video file (<code>.mp4</code>) directly in your GitHub repository.</li>
-      <li>Include the video link inside your <strong>README.md</strong>.</li>
-    </ul>
-  </div>
+    <div class="help-section">
+      <h3 class="help-title">Need Help?</h3>
+      <p class="help-description">If you have questions or need assistance with your submission, contact us:</p>
 
-  <!-- ─────────────── STEP 3 ─────────────── -->
-  <div class="submission-step">
-    <h3 class="step-header">Step 3 — Finalize Your README.md</h3>
-    <p class="step-description">Your <strong>README.md</strong> should be complete, clear, and professional. It must include:</p>
-    <ul class="step-list">
-      <li>Project title and theme alignment</li>
-      <li>Technologies used and key features</li>
-      <li>Setup and installation instructions</li>
-      <li>Team members and their contributions</li>
-      <li>Link to the demo video</li>
-      <li>High-quality screenshots or UI images</li>
-      <li><strong>Important:</strong> Broken or low-quality demo videos may result in reduced or zero points.</li>
-    </ul>
-  </div>
+      <div class="help-contacts">
+        <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="help-contact">
+          <div class="help-contact-icon"><i class="bi bi-discord"></i></div>
+          <div class="help-contact-content">
+            <span class="help-contact-title">Discord Server</span>
+            <span class="help-contact-subtitle">Get real-time support</span>
+          </div>
+        </a>
 
-  <!-- ─────────────── STEP 4 ─────────────── -->
-  <div class="submission-step">
-    <h3 class="step-header">Step 4 — Submit on Devpost</h3>
-    <ul class="step-list">
-      <li>Submit your <strong>GitHub repository link</strong> and project details on <strong>Devpost</strong> before the deadline.</li>
-      <li>Clearly state the <strong>track(s)</strong> you are competing under in your Devpost submission.</li>
-      <li><strong>Project name format:</strong> 
-        <ul>
-          <li>For one track: <em>Project Name — Track 1</em></li>
-          <li>For multiple tracks: <em>Project Name — Track 1 & Track 2</em></li>
-        </ul>
-      </li>
-      <li><strong>Missing track selection</strong> will default to placement under the <strong>General Track</strong>.</li>
-    </ul>
-  </div>
+        <a href="mailto:codecrunch@fiu.edu" class="help-contact">
+          <div class="help-contact-icon"><i class="bi bi-envelope"></i></div>
+          <div class="help-contact-content">
+            <span class="help-contact-title">Email Support</span>
+            <span class="help-contact-subtitle">codecrunch@fiu.edu</span>
+          </div>
+        </a>
+      </div>
 
-  <!-- ─────────────── CHECKLIST ─────────────── -->
-  <div class="checklist-section">
-    <h3 class="step-header">✅ Submission Checklist</h3>
-    <ul class="checklist-items">
-      <li>GitHub repository is <strong>public</strong> and contains all project files.</li>
-      <li>Demo video is under 5 minutes and uploaded as a file in the repository.</li>
-      <li>README.md is complete and includes all required sections.</li>
-      <li>Google Slides link and presentation file are included.</li>
-      <li>All links (GitHub, Google Slides, Devpost) are working correctly.</li>
-      <li>Project is submitted on Devpost with correct track(s) and naming format.</li>
-      <li>All materials uploaded before the submission deadline.</li>
-      <li><strong>Checked the Live Demo Presentation List</strong> and know your slot:
-        <a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing" target="_blank" rel="noopener">[ PUBLIC ] — DEMO PRESENTATION LIST</a>
-      </li>
-      <li><strong>Reviewed the hack agenda</strong> for the latest updates or changes to events.</li>
-    </ul>
-  </div>
-
-  <!-- ─────────────── IMPORTANT NOTICE ─────────────── -->
-  <div class="important-notice">
-    <h3 class="notice-title"><i class="bi bi-exclamation-triangle"></i> Important Reminder</h3>
-    <p class="notice-content">
-      Double-check your repository access, video link, and file permissions to avoid disqualification. 
-      Ensure your project name and documentation clearly reflect your chosen track(s).
-      Monitor the hack agenda throughout the event for schedule changes.
-    </p>
-  </div>
-
-  <!-- ─────────────── SUPPORT SECTION ─────────────── -->
-  <div class="help-section">
-    <h3 class="help-title">💬 Need Help?</h3>
-    <p class="help-description">If you have any questions or need technical support with your submission, reach out through the channels below:</p>
-
-    <div class="help-contacts">
-      <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="help-contact">
-        <div class="help-contact-icon"><i class="bi bi-discord"></i></div>
-        <div class="help-contact-content">
-          <span class="help-contact-title">Discord Server</span>
-          <span class="help-contact-subtitle">Get real-time help from mentors and organizers</span>
-        </div>
-      </a>
-
-      <a href="mailto:codecrunch@fiu.edu" class="help-contact">
-        <div class="help-contact-icon"><i class="bi bi-envelope"></i></div>
-        <div class="help-contact-content">
-          <span class="help-contact-title">Email Support</span>
-          <span class="help-contact-subtitle">codecrunch@fiu.edu</span>
-        </div>
+      <a href="#" class="button">
+        <i class="bi bi-question-circle"></i>
+        View Submission FAQ
       </a>
     </div>
-
-    <a href="#" class="button">
-      <i class="bi bi-question-circle"></i>
-      View Submission FAQ
-    </a>
   </div>
 </section>
 
